fix swagger and testing
